fix: CDN 방식에서 로컬 SDK 파일로 변경
- CDN 방식이 프로덕션 환경에서 작동하지 않음
- 로컬 SDK 파일(js/kakao-maps-sdk.js) 사용으로 안정적인 지도 표시 보장

--- a/directions.html
+++ b/directions.html
@@ -101,8 +101,8 @@
         </section>
     </div>
 
-    <!-- Kakao Map SDK - CDN (autoload 기본값으로 자동 로드) -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c5560694e7f31e0cfbb176d46eb79db7"></script>
+    <!-- Kakao Map SDK - Local File -->
+    <script type="text/javascript" src="js/kakao-maps-sdk.js"></script>
 
     <!-- Include ImageWithFallback script -->
     <script src="js/image-with-fallback.js"></script>
